fixed problem with cards on mobile

--- a/website/styles/cards.css
+++ b/website/styles/cards.css
@@ -6,7 +6,7 @@
 .card {
     min-height: 150px;
     max-width: 85rem;
-    min-width: 40rem;
+    min-width: 20rem;
     margin: 2.5rem auto;
 }
 
